# Campus_GPT

./: .env  .env.example  .gitignore  README.md  monitor_spider.py  pinecone-chromadb.txt  pyproject.toml  requirements.txt  restart_spider.py  run_scraper.py
01_crawling/: clean_data.py  faq_matcher.py  master_scraper.py  pdf_scraper.py  scraper.py
01_crawling/raw_data/: README.txt
02_rag_system/: README.md  agents.py  ingest.py  main.py  retriever.py  tasks.py  tools.py
02_rag_system/rag_architechture/: README.md  README.txt
03_fine_tuning/: generate_raft.py  generate_raft_focused.py  train_unsloth.ipynb
04_deployment/: Modelfile  app.py
04_deployment/custom_models/: README.txt
backend/: README.md  __init__.py  main.py  models.py  rag_service.py
chroma_db/: chroma.sqlite3
crawler/: README.md  crawl_meta.json  pyproject.toml  requirements.txt  scrapy.cfg
crawler/src/crawler/: SimpleRAG.py  advanceRAG.py  advance_chunking.py  chunking.ipynb  content_scrape.py  data_ingest.py  extractor.py  pipelines.py  settings.py  site_map.py  utils.py
crawler/src/crawler/extensions/: memory_cache.py
crawler/src/crawler/spiders/: nku_crawl.py
crawler/src/crawler/streamlit/: config.toml
documentation/: CHROMADB_SETUP.md  FINETUNING_SETUP.md  MASTER_SCRAPER_GUIDE.md  PDF_SCRAPING_GUIDE.md  RAFT_GENERATION_GUIDE.md  README_UPDATES.md  SCRAPER_GUIDE.md  SCRAPING_SCOPE.md  STRUCTURED_DATA_INTEGRATION.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Aurora.tsx
frontend/src/components/mvpblocks/: animated-ai-chat.tsx
utils/: helpers.py
