[project]
name = "campus-gpt"
version = "0.1.0"
description = "Campus GPT"
authors = [{name = "ak-pydev", email = "ak.iscoding@gmail.com"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai",
    "crewai-tools",
    "chromadb",
    "sentence-transformers",
    "playwright",
    "crawl4ai",
    "requests",
    "beautifulsoup4",
    "ollama",
    "openai>=1.83.0",
    "python-dotenv>=1.1.1",
    "litellm[proxy]>=1.74.9",
    "google-generativeai>=0.8.6",
    "google-genai>=1.60.0",
    "openrouter>=0.1.3",
    "notebook>=7.5.3",
    "pymupdf>=1.26.7",
    "unsloth>=2026.1.4",
    "transformers>=4.57.6",
    "jupyter>=1.1.1",
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.hatch.build.targets.wheel]
packages = ["01_crawling", "02_rag_system", "04_deployment", "backend"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu131"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
